welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:19: error: not found: value litmessage
	if(litmessage()=="X"){
           ^BDRBuggle:31: error: not found: value fini
		fini==true;
                ^